--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
   },
   "module": "",
   "keywords": [],
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.2",
+    "nodemon": "^3.1.7",
     "typescript": "^5.6.2"
   },
   "dependencies": {
