--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon --exec npx ts-node ./src/index.ts"
   },
   "module": "",
   "keywords": [],
@@ -19,7 +19,10 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.2",
+    "socket.io": "^4.8.0"
   }
 }
